--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-13 21:00+0000\n"
+"POT-Creation-Date: 2017-04-17 13:29+0000\n"
 "PO-Revision-Date: 2017-04-13 23:15+0200\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: \n"
@@ -46,7 +46,7 @@ msgstr "Gesamtumsatz"
 msgid "Contacting Stripe …"
 msgstr "Kontaktiere Stripe …"
 
-#: pretix/static/pretixbase/js/asyncdownload.js:27
+#: pretix/static/pretixbase/js/asyncdownload.js:28
 #: pretix/static/pretixbase/js/asynctask.js:42
 #: pretix/static/pretixbase/js/asynctask.js:94
 msgid ""
@@ -58,18 +58,18 @@ msgstr ""
 "dies länger als zwei Minuten dauert, kontaktieren Sie uns bitte oder gehen "
 "Sie in Ihrem Browser einen Schritt zurück und versuchen es erneut."
 
-#: pretix/static/pretixbase/js/asyncdownload.js:40
+#: pretix/static/pretixbase/js/asyncdownload.js:41
 #: pretix/static/pretixbase/js/asynctask.js:62
 #: pretix/static/pretixbase/js/asynctask.js:116
 msgid "An error of type {code} occured."
 msgstr "Ein Fehler ist aufgetreten. Fehlercode: {code}"
 
-#: pretix/static/pretixbase/js/asyncdownload.js:53
+#: pretix/static/pretixbase/js/asyncdownload.js:54
 #: pretix/static/pretixbase/js/asynctask.js:137
 msgid "We are processing your request …"
 msgstr "Wir verarbeiten Ihre Anfrage …"
 
-#: pretix/static/pretixbase/js/asyncdownload.js:54
+#: pretix/static/pretixbase/js/asyncdownload.js:55
 #: pretix/static/pretixbase/js/asynctask.js:138
 msgid ""
 "We are currently sending your request to the server. If this takes longer "
@@ -86,8 +86,8 @@ msgid ""
 "Your request has been queued on the server and will now be processed. "
 "Depending on the size of your event, this might take up to a few minutes."
 msgstr ""
-"Ihre Anfrage ist auf dem Server angekommen und wird nun verarbeitet. Je "
-"nach Größe der Veranstaltung kann dies einige Minuten dauern."
+"Ihre Anfrage ist auf dem Server angekommen und wird nun verarbeitet. Je nach "
+"Größe der Veranstaltung kann dies einige Minuten dauern."
 
 #: pretix/static/pretixbase/js/asynctask.js:65
 msgid ""
@@ -98,6 +98,7 @@ msgstr ""
 "Letzter Fehlercode: {code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:107
+#: pretix/static/pretixcontrol/js/ui/mail.js:20
 msgid "The request took to long. Please try again."
 msgstr "Diese Anfrage hat zu lange gedauert. Bitte erneut versuchen."
 
@@ -120,6 +121,33 @@ msgstr "Kopiert!"
 #: pretix/static/pretixcontrol/js/clipboard.js:29
 msgid "Press Ctrl-C to copy!"
 msgstr "Drücken Sie Strg+C zum Kopieren!"
+
+#: pretix/static/pretixcontrol/js/ui/mail.js:18
+#, fuzzy
+#| msgid "An error of type {code} occured."
+msgid "An error has occurred."
+msgstr "Ein Fehler ist aufgetreten. Fehlercode: {code}"
+
+#: pretix/static/pretixcontrol/js/ui/mail.js:23
+#, fuzzy
+#| msgid "An error of type {code} occured."
+msgid "An error of type {code} occurred."
+msgstr "Ein Fehler ist aufgetreten. Fehlercode: {code}"
+
+#: pretix/static/pretixcontrol/js/ui/mail.js:25
+#, fuzzy
+#| msgid ""
+#| "We currenctly cannot reach the server. Please try again. Error code: "
+#| "{code}"
+msgid ""
+"We currently cannot reach the server. Please try again. Error code: {code}"
+msgstr ""
+"Wir können den Server aktuell nicht erreichen. Bitte versuchen Sie es noch "
+"einmal. Fehlercode: {code}"
+
+#: pretix/static/pretixcontrol/js/ui/mail.js:52
+msgid "Generating messages …"
+msgstr ""
 
 #: pretix/static/pretixcontrol/js/ui/main.js:43
 msgid "Unknown error."
