Even more wording corrections

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-17 13:29+0000\n"
-"PO-Revision-Date: 2017-04-17 15:42+0200\n"
+"POT-Creation-Date: 2017-04-17 15:09+0000\n"
+"PO-Revision-Date: 2017-04-17 17:10+0200\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: Raphael Michel <michel@rami.io>\n"
 "Language: de\n"
@@ -2517,8 +2517,8 @@ msgid ""
 "Normally, pretix asks for one email address per order and the order "
 "confirmation will be send to that email address. If you enable this option, "
 "the system will additionally ask for individual email addresses for every "
-"admission ticket. This might be useful for example if you want to obtain "
-"individual addresses for every attendee even in case of group orders."
+"admission ticket. This might be useful if you want to obtain individual "
+"addresses for every attendee even in case of group orders."
 msgstr ""
 "Üblicherweise fragt pretix nach einer E-Mail-Adresse pro Bestellung und "
 "sendet die Bestellbestätigung an diese Adresse. Wenn Sie diese Option "
@@ -2533,10 +2533,9 @@ msgstr "E-Mail-Adressen pro Ticket erfordern"
 
 #: pretix/control/forms/event.py:253
 msgid ""
-"Require customers to fill in an individual e-mail addresses for all "
-"admission tickets. See the above option for more details. One email address "
-"for the order confirmation will always be required regardloess of this "
-"setting."
+"Require customers to fill in individual e-mail addresses for all admission "
+"tickets. See the above option for more details. One email address for the "
+"order confirmation will always be required regardless of this setting."
 msgstr ""
 "Erfordere, dass für jedes Zutritts-Ticket eine einzelne E-Mail-Adresse "
 "eingegeben wird. Mehr Infos finden Sie bei der vorherigen Option. Eine E-"
