--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-04-17 13:29+0000\n"
-"PO-Revision-Date: 2017-04-13 23:15+0200\n"
+"POT-Creation-Date: 2017-04-17 15:09+0000\n"
+"PO-Revision-Date: 2017-04-17 17:10+0200\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -123,31 +123,23 @@ msgid "Press Ctrl-C to copy!"
 msgstr "Drücken Sie Strg+C zum Kopieren!"
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:18
-#, fuzzy
-#| msgid "An error of type {code} occured."
 msgid "An error has occurred."
-msgstr "Ein Fehler ist aufgetreten. Fehlercode: {code}"
+msgstr "Ein Fehler ist aufgetreten."
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:23
-#, fuzzy
-#| msgid "An error of type {code} occured."
 msgid "An error of type {code} occurred."
-msgstr "Ein Fehler ist aufgetreten. Fehlercode: {code}"
+msgstr "Ein Fehler vom Typ {code} ist aufgetreten."
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:25
-#, fuzzy
-#| msgid ""
-#| "We currenctly cannot reach the server. Please try again. Error code: "
-#| "{code}"
 msgid ""
 "We currently cannot reach the server. Please try again. Error code: {code}"
 msgstr ""
-"Wir können den Server aktuell nicht erreichen. Bitte versuchen Sie es noch "
+"Wir können den Server aktuell nicht erreichen. Bitte versuche es noch "
 "einmal. Fehlercode: {code}"
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:52
 msgid "Generating messages …"
-msgstr ""
+msgstr "Generiere Nachrichten…"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:43
 msgid "Unknown error."
