--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -2012,7 +2012,7 @@ msgid ""
 "we successfully received your order for {event} with a total value\n"
 "of {total} {currency}. Please complete your payment before {date}.\n"
 "\n"
-"{paymentinfo}\n"
+"{payment_info}\n"
 "\n"
 "You can change your order details and view the status of your order at\n"
 "{url}\n"
@@ -2024,7 +2024,7 @@ msgstr ""
 "\n"
 "wir haben deine Bestellung für {event} mit einem Gesamtbetrag von\n"
 "{total} {currency} erhalten. Bitte schließe die Bezahlung bis {date} ab.\n"
-"{paymentinfo}\n"
+"{payment_info}\n"
 "\n"
 "Du kannst deine Bestellung unter folgender Adresse einsehen und ändern:\n"
 "{url}\n"
@@ -2859,10 +2859,10 @@ msgstr "Text"
 #: pretix/control/forms/event.py:493
 #, python-brace-format
 msgid ""
-"Available placeholders: {event}, {total}, {currency}, {date}, {paymentinfo}, "
+"Available placeholders: {event}, {total}, {currency}, {date}, {payment_info}, "
 "{url}, {invoice_name}, {invoice_company}"
 msgstr ""
-"Verfügbare Platzhalter: {event}, {total}, {currency}, {date}, {paymentinfo}, "
+"Verfügbare Platzhalter: {event}, {total}, {currency}, {date}, {payment_info}, "
 "{url}, {invoice_name}, {invoice_company}"
 
 #: pretix/control/forms/event.py:502
@@ -9300,7 +9300,7 @@ msgstr "Deutsch (Du)"
 #~ "\n"
 #~ "we successfully received your order for %(event)s with a total value\n"
 #~ "of %(total)s %(currency)s. Please complete your payment before %(date)s.\n"
-#~ "%(paymentinfo)s\n"
+#~ "%(payment_info)s\n"
 #~ "\n"
 #~ "You can change your order details and view the status of your order at\n"
 #~ "\n"
@@ -9314,7 +9314,7 @@ msgstr "Deutsch (Du)"
 #~ "wir haben IhredeineBestellung für %(event)s mit einem Gesamtbetrag von\n"
 #~ "%(total)s %(currency)s erhalten. Bitte schließe die Bezahlung bis "
 #~ "%(date)s ab.\n"
-#~ "%(paymentinfo)s\n"
+#~ "%(payment_info)s\n"
 #~ "\n"
 #~ "Du kannst deine Bestellung unter folgender Adresse einsehen und ändern:\n"
 #~ "%(url)s\n"
