--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-06-26 15:06+0000\n"
-"PO-Revision-Date: 2017-06-26 17:08+0200\n"
+"POT-Creation-Date: 2017-06-26 15:27+0000\n"
+"PO-Revision-Date: 2017-06-26 17:28+0200\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: Raphael Michel <michel@rami.io>\n"
 "Language: de\n"
@@ -3853,7 +3853,7 @@ msgstr ""
 #: pretix/control/templates/pretixcontrol/user/2fa_confirm_totp.html:79
 #: pretix/control/templates/pretixcontrol/user/reauth.html:19
 #: pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_assign.html:11
-#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:68
+#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:72
 #: pretix/presale/templates/pretixpresale/event/checkout_payment.html:51
 #: pretix/presale/templates/pretixpresale/event/checkout_questions.html:92
 #: pretix/presale/templates/pretixpresale/event/index.html:39
@@ -8352,17 +8352,21 @@ msgstr ""
 
 #: pretix/presale/templates/pretixpresale/event/checkout_addons.html:33
 #, python-format
-msgid "You need to choose %(min_count)s options from this category."
-msgstr ""
-"Sie müssen mindestens %(min_count)s Optionen aus dieser Kategorie auswählen."
+msgid "You need to choose exactly one option from this category."
+msgid_plural "You need to choose %(min_count)s options from this category."
+msgstr[0] "Sie müssen genau eine Option aus dieser Kategorie auswählen."
+msgstr[1] ""
+"Sie müssen genau %(min_count)s Optionen aus dieser Kategorie auswählen."
 
-#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:37
+#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:39
 #, python-format
-msgid "You can choose up to %(max_count)s options from this category."
-msgstr ""
+msgid "You can choose at most one option from this category."
+msgid_plural "You can choose up to %(max_count)s options from this category."
+msgstr[0] "Sie können höchstens eine Optionen aus dieser Kategorie auswählen."
+msgstr[1] ""
 "Sie können höchstens %(max_count)s Optionen aus dieser Kategorie auswählen."
 
-#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:41
+#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:45
 #, python-format
 msgid ""
 "You can choose between %(min_count)s and %(max_count)s options from this "
@@ -8371,11 +8375,11 @@ msgstr ""
 "Sie können zwischen %(min_count)s und %(max_count)s Optionen aus dieser "
 "Kategorie auswählen."
 
-#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:51
+#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:55
 msgid "There are no add-ons available for this product."
 msgstr "Es sind keine Zusatzprodukte für dieses Produkt verfügbar."
 
-#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:63
+#: pretix/presale/templates/pretixpresale/event/checkout_addons.html:67
 #: pretix/presale/templates/pretixpresale/event/checkout_confirm.html:147
 #: pretix/presale/templates/pretixpresale/event/checkout_payment.html:46
 #: pretix/presale/templates/pretixpresale/event/checkout_questions.html:87
