--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -1624,9 +1624,9 @@ msgstr "Berechne die Gebühr als Anteil vom Endbetrag."
 #: pretix/base/payment.py:164
 #, python-brace-format
 msgid ""
-"We recommend you to enable this if you want your users to pay the payment "
+"We recommend to enable this if you want your users to pay the payment "
 "fees of your payment provider. <a href=\"{docs_url}\" target=\"_blank"
-"\">Click here for detailled information on what this does.</a> Don't forget "
+"\">Click here for detailed information on what this does.</a> Don't forget "
 "to set the correct fees above!"
 msgstr ""
 "Wir empfehlen, diese Option zu aktivieren, wenn Sie die Gebühren Ihres "
