--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-24 15:14+0000\n"
-"PO-Revision-Date: 2017-06-01 12:56+0200\n"
+"POT-Creation-Date: 2017-08-27 07:31+0000\n"
+"PO-Revision-Date: 2017-08-27 09:35+0200\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.1\n"
+"X-Generator: Poedit 2.0.3\n"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:53
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:59
@@ -63,10 +63,8 @@ msgid "Sample product – sample variation"
 msgstr "Beispielprodukt – Beispielvariante"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:167
-#, fuzzy
-#| msgid "Sample product – sample variation"
 msgid "Sample product description"
-msgstr "Beispielprodukt – Beispielvariante"
+msgstr "Beispielproduktbeschreibung"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:168
 msgid "123.45 EUR"
@@ -78,10 +76,8 @@ msgid "John Doe"
 msgstr "Max Mustermann"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:171
-#, fuzzy
-#| msgid "Sample variation"
 msgid "Sample company"
-msgstr "Beispielvariante"
+msgstr "Musterfirma GmbH"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:172
 msgid "Sample event name"
@@ -117,11 +113,11 @@ msgstr "Musterstadt"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:180
 msgid "Event organizer company"
-msgstr ""
+msgstr "Ausrichtende Firma"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:181
 msgid "Event organizer info text"
-msgstr ""
+msgstr "Information zum Veranstalter"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:182
 msgid ""
