Fix #613 - Minor typo in last change date

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -3002,7 +3002,7 @@ msgstr ""
 
 #: pretix/control/forms/event.py:230
 msgid "Last date of modifications"
-msgstr "Letzes Änderungsdatum"
+msgstr "Letztes Änderungsdatum"
 
 #: pretix/control/forms/event.py:231
 msgid ""
