--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -2999,7 +2999,7 @@ msgstr ""
 
 #: pretix/control/forms/event.py:230
 msgid "Last date of modifications"
-msgstr "Letzes Änderungsdatum"
+msgstr "Letztes Änderungsdatum"
 
 #: pretix/control/forms/event.py:231
 msgid ""
