--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -1361,7 +1361,7 @@ msgstr "Bestelltes Produkt"
 
 #: pretix/base/models/orders.py:739
 msgid "Order positions"
-msgstr "Bestellzeile"
+msgstr "Bestellzeilen"
 
 #: pretix/base/models/orders.py:836
 msgid "Cart ID (e.g. session key)"
