translation for export forms
fixes #647

--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -207,6 +207,14 @@ msgstr[0] ""
 msgstr[1] ""
 "Die Produkte in Ihrem Warenkorb sind noch {num} Minuten für Sie reserviert."
 
+#: pretix/static/pretixcontrol/js/ui/main.js:329
+msgid "All"
+msgstr "Alle"
+
+#: pretix/static/pretixcontrol/js/ui/main.js:330
+msgid "None"
+msgstr "Keine"
+
 #~ msgid "Sample product"
 #~ msgstr "Beispielprodukt"
 
