--- a/src/pretix/locale/de_Informal/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/djangojs.po
@@ -187,6 +187,14 @@ msgstr "Generiere Nachrichten…"
 msgid "Unknown error."
 msgstr "Unbekannter Fehler."
 
+#: pretix/static/pretixcontrol/js/ui/main.js:329
+msgid "All"
+msgstr "Alle"
+
+#: pretix/static/pretixcontrol/js/ui/main.js:330
+msgid "None"
+msgstr "Keine"
+
 #: pretix/static/pretixcontrol/js/ui/question.js:41
 msgid "Others"
 msgstr "Sonstige"
